--- a/Backend/login/loginapp/templates/loginapp/Html file/Home.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Home.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Tax Management System</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -24,8 +25,8 @@
 	<div class="header">
 		<nav class="navbar navbar-expand-md navbar-dark navigation">
 			<div class="container">
-				<a href="index.html" class="navbar-brand text-warning font-weight-bold"> 	
-					<img class ="navbar-logo" src = "../images/logo1.png">
+				<a href="Home.html" class="navbar-brand text-warning font-weight-bold"> 	
+					<img class ="navbar-logo" src = "{% static 'Image/logo1.png' %}">
 				</a>
 
 				<button class ="navbar-toggler type="button" data-toggle="collapse" data-target="#collapsenavbar">
@@ -50,8 +51,9 @@
 							
 						</li>
 					</ul>
-					<a href="pages/SignIn.html" class="nav-link text-white">
-						<button type="button" class="btn btn-primary btn-sm">Sign-in</button>
+					<a href="{% url 'logout' %}" class="nav-link text-white">
+
+						<button type="button" class="btn btn-primary btn-sm">Logout</button>
 					</a>
 					 <form class="d-flex">
 				        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
