--- a/css/Register.css
+++ b/css/Register.css
@@ -140,27 +140,25 @@ input{
 	color: #555;
 }
 
-.button{
-	display: block;
-	width: 100%;
-	height: 50px;
-	border-radius: 25px;
-	margin: 1rem 0;
-	font-size: 1.2rem;
-	outline: none;
-	border: none;
-	cursor: pointer;
-	background-image: linear-gradient(to right, #00FFFF, #00008B,#00FFFF);
-	background-size: 200%;
-	font-family: 'Poppins';
-	transition: .5s;
-	text-transform: uppercase;
-	color: white;
-}
 
-.button:hover{
-	background-position: right;
+.button{
+	 border: none;
+     outline: none;
+     height: 50px;
+     width: 100%;
+     background-color: #090162;
+     color: white;
+     border-radius: 4px;
+     font-weight: bold;
+     box-shadow: 5px 5px 5px grey;
+     text-transform: uppercase;
 }
+ .button:hover {
+        background-color: white;
+        border: 1px solid;
+        color: #090162;
+        box-shadow: none;
+      }
 
 @media screen and (max-width: 1000px){
 	form{
@@ -175,6 +173,9 @@ input{
 
 	.personalizationImg img{
 		width: 400px;
+	}
+	.col-sm{
+		align-items: center;
 	}
 }
 
