Made working Add post in dashboard

--- a/Backend/login/loginapp/templates/loginapp/Html file/Register.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Register.html
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-expand-md navbar-dark navigation">
       <div class="container">
         <a href="Home.html" class="navbar-brand text-warning font-weight-bold">
-          <img class="navbar-logo" src="{% static 'Image/logo1.png' %}" />
+          <img class="navbar-logo" src="{% static 'Images/logo1.png' %}" />
         </a>
       </div>
     </nav>
@@ -51,14 +51,14 @@
         <div class="col-lg-6 mt-5">
           <img
             class="personalizationImg"
-            src="{% static 'Image/Personalization.png' %}"
+            src="{% static 'Images/Personalization.png' %}"
           />
         </div>
         <div class="col-lg-6 mt-5">
           <div class="login-container">
             <form method="POST">
               {% csrf_token %}
-              <img class="avatar" src="{% static 'Image/Avatar.png' %}" />
+              <img class="avatar" src="{% static 'Images/Avatar.png' %}" />
               <h2>Welcome</h2>
               <div class="input-div one focus">
                 <div class="i">
