--- a/Backend/login/loginapp/templates/loginapp/Html file/index.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/index.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Tax Management System</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -24,8 +25,8 @@
 	<div class="header">
 		<nav class="navbar navbar-expand-md navbar-dark navigation">
 			<div class="container">
-				<a href="index.html" class="navbar-brand text-warning font-weight-bold"> 	
-					<img class ="navbar-logo" src = "images/logo1.png">
+				<a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold"> 	
+					<img class ="navbar-logo" src = "{% static 'Images/logo1.png' %}">
 				</a>
 
 				<button class ="navbar-toggler type="button" data-toggle="collapse" data-target="#collapsenavbar">
@@ -35,7 +36,7 @@
 				<div class="collapse navbar-collapse text-center " id="collapsenavbar">
 					<ul class="navbar-nav ml-auto mr-auto">
 						<li class="nav-item"> 
-							<a href="index.html" class="nav-link text-white">HOME</a>
+							<a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
 						</li>
 						<li class="nav-item"> 
 							<a href="pages/politics.html" class="nav-link text-white">POLITICS</a>
@@ -50,8 +51,8 @@
 							
 						</li>
 					</ul>
-					<a href="pages/SignIn.html" class="nav-link text-white">
-						<button type="button" class="btn btn-primary btn-sm">Sign-in</button>
+					<a href="{% url 'logout' %}" class="nav-link text-white">
+						<button type="button" class="btn btn-primary btn-sm">Logout</button>
 					</a>
 					 <form class="d-flex">
 				        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
@@ -66,7 +67,7 @@
 		<div class="row">
 			<div class="col-lg-8 md-8 sm-10">
 				<div class="news-portal">
-					<img src="images/vaccine.jpg" class="image">
+					<img src="{% static 'Images/vaccine.jpg' %}" class="image">
 					<h3 class="title">COVID 19 vaccination campaign postponed untill new batch of vacciness arrive in Nepal
 					</h3>
 				</div>
@@ -74,20 +75,19 @@
 			<div class="col-lg-4 md-8 sm-10">
 				<div class="row">
 					<div class="news-portal">
-						<img src="images/politics.jpg" class="image1">
+						<img src="{% static 'Images/politics.jpg' %}" class="image1">
 						<h5 class="title">With neither side ready to backdown , confrontation in UML continues
 						</h5>
 					</div>
 				</div>
 				<div class="row">
 					<div class="news-portal">
-						<img src="images/sports.jpg" class="image1">
+						<img src="{% static 'Images/sports.jpg' %}" class="image1">
 						<h5 class="title">Chelesea progressed to champion league quater final
 						</h5>
 					</div>
 				</div>
 			</div>
-			
 		</div>
 	</div>
 </body>
