--- a/Backend/login/loginapp/static/css/Register.css
+++ b/Backend/login/loginapp/static/css/Register.css
@@ -140,27 +140,26 @@ input{
 	color: #555;
 }
 
-.button{
-	display: block;
-	width: 100%;
-	height: 50px;
-	border-radius: 25px;
-	margin: 1rem 0;
-	font-size: 1.2rem;
-	outline: none;
-	border: none;
-	cursor: pointer;
-	background-image: linear-gradient(to right, #00FFFF, #00008B,#00FFFF);
-	background-size: 200%;
-	font-family: 'Poppins';
-	transition: .5s;
-	text-transform: uppercase;
-	color: white;
-}
 
-.button:hover{
-	background-position: right;
+.button{
+	 display: block;
+	 border: none;
+     outline: none;
+     height: 50px;
+     width: 100%;
+	 border-radius: 25px;
+	 margin: 1rem 0;
+     font-size: 1.2rem;
+	 background-image: linear-gradient(to right, #38d39f, #090162, #38d39f);
+	 color: #fff;
+	 font-family: 'Poppins';
+	 background-size: 200%;
+	 transition: .5s;
+	 text-transform: uppercase;
 }
+ .button:hover {
+       background-position: right;
+      }
 
 @media screen and (max-width: 1000px){
 	form{
@@ -175,6 +174,9 @@ input{
 
 	.personalizationImg img{
 		width: 400px;
+	}
+	.col-sm{
+		align-items: center;
 	}
 }
 
