--- a/Backend/login/loginapp/templates/loginapp/Html file/Dashboard.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Dashboard.html
@@ -177,7 +177,7 @@
                       
                       class="btn btn-success"
                     >
-                      Update
+                      Add
                     </button>
                     <button
                       type="button"
@@ -216,24 +216,27 @@
                 </p>
               </div>
             </div>
+            <form method="post" >
             <button
               type="button"
               class="btn btn-warning mt-2 px-5 mr-2"
               data-toggle="modal"
-              data-target="#myModal1"
-            >
-              Edit
-            </button>
+              data-target="#myModal1">
+              <a href="{% url 'update_post' post.id %}">Edit</a>
+          </button>
+
+         
             <button
               type="button"
               class="btn btn-danger mt-2 px-5"
               data-toggle="modal"
               data-target="#myModal2"
             >
-              Delete
+            <a href="{% url 'delete_post' post.id %}">Delete</a>
             </button>
           </div>
-          <!--Edit button Popup for all news portal-->
+        </form>
+          <!-- Edit button Popup for all news portal -->
           <!-- Modal -->
 <form method="POST">
   {% csrf_token %}
@@ -300,10 +303,7 @@
                 </div>
                 <div class="modal-footer">
                   <button
-                    
-                    class="btn btn-warning"
-                    
-                  >
+                    class="btn btn-warning">
                     Edit
                   </button>
                   <button
@@ -321,7 +321,10 @@
 
           <!--Delete button Popup for all news portal-->
           <!-- Modal -->
+          <form method="POST">
+            {% csrf_token %}
           <div class="modal fade" id="myModal2" role="dialog">
+            
             <div class="modal-dialog">
               <!-- Modal content-->
               <div class="modal-content">
@@ -333,16 +336,12 @@
                 </div>
                 <div class="modal-body">
                   <!--<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>-->
-                  <p>Are you Sure you want to delete this post?</p>
+                  <p>Are you Sure you want to delete this post "{{ post.title }}"?</p>
                 </div>
                 <div class="modal-footer">
-                  <button
-                    type="button"
-                    class="btn btn-danger"
-                    data-dismiss="modal"
-                  >
-                    Delete
-                  </button>
+                  <button  class="btn btn-success">
+                   Delete
+                    </button>
                   <button
                     type="button"
                     class="btn btn-info"
@@ -354,6 +353,7 @@
               </div>
             </div>
           </div>
+          </form>
           <!-- </div> -->
           {% endfor %}
 
