--- a/Backend/login/loginapp/templates/loginapp/Html file/Delete.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Delete.html
@@ -61,48 +61,19 @@
 
                   </div>
                   <div class="modal-body">
-                    <div class="mb-3">
-                      <label for="exampleFormControlInput1" class="form-label">Title</label>
-                      <!-- <input type="title" class="form-control" id="exampleFormControlInput1" placeholder="Title"> -->
-                      <div
-                      id="exampleFormControlInput1"
-                    >{{form.title}}</div>
-                    </div>
-                     <div class="mb-3">
-                      <label for="exampleFormControlInput1" class="form-label">Author</label>
-                      <!-- <input type="author" class="form-control" id="exampleFormControlInput1" placeholder="Author"> -->
-                      <div
-                      id="exampleFormControlInput1"
-                      >{{form.auth}}</div>
-                  </div>    
-                    </div>
-                    <label for="sel1">Category:</label>
-                    <!-- <select class="form-control" id="sel1">
-                      <option>Politics</option>
-                      <option>Sports</option>
-                      <option>Business</option>
-                      <option>Entertainment</option>
-                    </select> -->
-                    {{form.category}}
-                    <div class="mb-3">
-                      <label for="exampleFormControlTextarea1" class="form-label">Body</label>
-                      <!-- <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea> -->
-                      <div
-                      id="exampleFormControlTextarea1"
-                      >{{form.body}}-</div>
-                    </div>
-                    </div>
-                  </div>
-        
+                    <div class="modal-body">
+                        <!--<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>-->
+                        <p>Are you Sure you want to delete this post "{{ post.title }}"?</p>
+                      </div>
+
                   <div class="modal-footer">       
                     <button  class="btn btn-success">
-                  Edit
+                  Delete
                   </button>
 
                     <button type="button" class="btn btn-info">Cancel</button>
                   </div>
-              </form>
-                
+           
               </div>
     </body>
 </html>
