--- a/Backend/login/loginapp/templates/loginapp/Html file/Home.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Home.html
@@ -25,7 +25,7 @@
 	<div class="header">
 		<nav class="navbar navbar-expand-md navbar-dark navigation">
 			<div class="container">
-				<a href="Home.html" class="navbar-brand text-warning font-weight-bold"> 	
+				<a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold"> 	
 					<img class ="navbar-logo" src = "{% static 'Image/logo1.png' %}">
 				</a>
 
