--- a/Backend/login/loginapp/templates/loginapp/Html file/Delete.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Delete.html
@@ -71,7 +71,7 @@
                   Delete
                   </button>
 
-                    <button type="button" class="btn btn-info">Cancel</button>
+                    <a  href="{% url 'dashboard' %}" class="btn btn-info">Cancel</a>
                   </div>
            
               </div>
