--- a/Backend/login/loginapp/templates/loginapp/Html file/Edit.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Edit.html
@@ -99,7 +99,7 @@
                   Edit
                   </button>
 
-                    <button type="button" class="btn btn-info">Cancel</button>
+                    <a href="{% url 'dashboard' %}" class="btn btn-info">Cancel</a>
                   </div>
               </form>
                 
