Now Images can be added but it on renders on the detail_article page. Needs some frontend assistance to render it on the dashboard.

--- a/Backend/login/loginapp/templates/loginapp/Html file/detailed_article.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/detailed_article.html
@@ -3,6 +3,10 @@
 <br />
 <hr />
 <br />
+{% if post.header_image %}
+<img src="{{ post.header_image.url }}"><br /><br />
+{% endif %}
 {{ post.body }}
-<br /><br />
+<br />
+<br />
 <a href="{% url 'Blog' %}">Back</a>
