--- a/Backend/login/loginapp/templates/loginapp/Html file/Home.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Home.html
@@ -29,7 +29,7 @@
 					<img class ="navbar-logo" src = "{% static 'Image/logo1.png' %}">
 				</a>
 
-				<button class ="navbar-toggler type="button" data-toggle="collapse" data-target="#collapsenavbar">
+				<button class ="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
 					<span class="navbar-toggler-icon">	
 					</span>
 				</button>
