--- a/Backend/login/loginapp/templates/loginapp/Html file/Dashboard.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Dashboard.html
@@ -213,6 +213,12 @@
           {% for post in object_list %}
           <div class="col-sm mt-5">
             <div class="card" style="width: 18rem; background-color: #b4b8ab">
+              {% if post.header_image %}
+              <img src="{{ post.header_image.url }}" class="card-img-top" alt="...">
+              {% else %}
+              <img src="{% static 'Images/icon-image.png' %}" class="card-img-top" alt="...">
+              {% endif %}
+  
               <div class="card-body">
                 <h5 class="card-title">
                   {{ post.title }} - {{ post.auth.username }} - {{ post.auth.email }}
