--- a/Backend/login/loginapp/templates/loginapp/Html file/detailed_article.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/detailed_article.html
@@ -1,12 +1,18 @@
+{% load static %}
 <h1>{{ post.title }}</h1>
 <small>By: {{ post.auth.username }}</small>
 <br />
 <hr />
 <br />
 {% if post.header_image %}
-<img src="{{ post.header_image.url }}"><br /><br />
-{% endif %}
-{{ post.body }}
+<img src="{{ post.header_image.url }}" /><br /><br />
+{% else %}
+<img
+  src="{% static 'Images/icon-image.png' %}"
+  class="card-img-top"
+  alt="..."
+/>
+{% endif %} {{ post.body }}
 <br />
 <br />
 <a href="{% url 'Blog' %}">Back</a>
