--- a/Backend/login/loginapp/templates/loginapp/Html file/index.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/index.html
@@ -1,94 +1,277 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Tax Management System</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <head>
+    <title>Tax Management System</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/style.css' %}"
+    />
+    <!-- Latest compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
 
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
 
-</head>
-<body style="background-color: rgb(219, 226, 226);">
-	<div class="header">
-		<nav class="navbar navbar-expand-md navbar-dark navigation">
-			<div class="container">
-				<a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold"> 	
-					<img class ="navbar-logo" src = "{% static 'Images/logo1.png' %}">
-				</a>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body style="background-color: rgb(219, 226, 226)">
+    <!--navigation bar-->
+    <div class="header">
+      <nav class="navbar navbar-expand-md navbar-dark navigation">
+        <div class="container">
+          <a
+            href="{% url 'home' %}"
+            class="navbar-brand text-warning font-weight-bold"
+          >
+            <img class="navbar-logo" src="{% static 'Images/logo1.png' %}" />
+          </a>
 
-				<button class ="navbar-toggler type="button" data-toggle="collapse" data-target="#collapsenavbar">
-					<span class="navbar-toggler-icon">	
-					</span>
-				</button>
-				<div class="collapse navbar-collapse text-center " id="collapsenavbar">
-					<ul class="navbar-nav ml-auto mr-auto">
-						<li class="nav-item"> 
-							<a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
-						</li>
-						<li class="nav-item"> 
-							<a href="pages/politics.html" class="nav-link text-white">POLITICS</a>
-						</li>
-						<li class="nav-item"> 
-							<a href="" class="nav-link text-white">BUSINESS</a>
-						</li>
-						<li class="nav-item"> 
-							<a href="" class="nav-link text-white">SPORT</a>
-						</li>
-						<li class="nav-item"> 
-							
-						</li>
-					</ul>
-					<a href="{% url 'logout' %}" class="nav-link text-white">
-						<button type="button" class="btn btn-primary btn-sm">Logout</button>
-					</a>
-					 <form class="d-flex">
-				        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-				        <button class="btn btn-outline-success btn-sm ml-2" type="submit">Search</button>
-				      </form>
-				</div>
-			</div>
-		</nav>
-	</div>
-	<!-- page content-->	
-	<div class="container" style= "background-color: white">
-		<div class="row">
-			<div class="col-lg-8 md-8 sm-10">
-				<div class="news-portal">
-					<img src="{% static 'Images/vaccine.jpg' %}" class="image">
-					<h3 class="title">COVID 19 vaccination campaign postponed untill new batch of vacciness arrive in Nepal
-					</h3>
-				</div>
-			</div>
-			<div class="col-lg-4 md-8 sm-10">
-				<div class="row">
-					<div class="news-portal">
-						<img src="{% static 'Images/politics.jpg' %}" class="image1">
-						<h5 class="title">With neither side ready to backdown , confrontation in UML continues
-						</h5>
-					</div>
-				</div>
-				<div class="row">
-					<div class="news-portal">
-						<img src="{% static 'Images/sports.jpg' %}" class="image1">
-						<h5 class="title">Chelesea progressed to champion league quater final
-						</h5>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</body>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#collapsenavbar"
+          >
+            <span class="navbar-toggler-icon"> </span>
+          </button>
+          <div class="collapse navbar-collapse text-center" id="collapsenavbar">
+            <ul class="navbar-nav ml-auto mr-auto">
+              <li class="nav-item">
+                <a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link text-white">ABOUT US</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  style="color: white"
+                >
+                  NEWS
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#"> POLITICS </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#"> ENTERTAINMENT </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#"> BUSINESS </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#"> SPORTS </a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a href="pages/politics.html" class="nav-link text-white"
+                  >TAX CALCULATOR</a
+                >
+              </li>
+            </ul>
+            <a href="{% url 'logout' %}" class="nav-link text-white">
+              <button type="button" class="btn btn-primary btn-sm">
+                Logout
+              </button>
+            </a>
+            <form class="d-flex">
+              <input
+                class="form-control"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success btn-sm ml-2" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <!-- page content-->
+    <div class="container" style="background-color: white">
+      <div class="row">
+        <div class="col-lg-8 md-8 sm-10">
+          <div class="news-portal">
+            <a href="pages/Blog.html" style="text-decoration: none">
+              <img src="{% static 'Images/vaccine.jpg' %}" class="image" />
+              <h3 class="title">
+                COVID 19 vaccination campaign postponed untill new batch of
+                vacciness arrive in Nepal
+              </h3>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 md-8 sm-10">
+          <div class="row">
+            <div class="news-portal">
+              <img src="{% static 'Images/politics.jpg' %}" class="image1" />
+              <h5 class="title">
+                With neither side ready to backdown , confrontation in UML
+                continues
+              </h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="news-portal">
+              <img src="{% static 'Images/sports.jpg' %}" class="image1" />
+              <h5 class="title">
+                Chelesea progressed to champion league quater final
+              </h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img src="{% static 'Images/pajero.gif' %}" class="advertisement" />
+      <div>
+        <h4 class="category">Politics</h4>
+        <div class="row">
+          {% for post in object_list %} {% if post.category == 'Politics' %}
+          <div class="col-lg-3">
+            <div class="businessNews">
+              {% if post.header_image %}
+              <img src="{{ post.header_image.url }}" class="businessImg" />
+              {% else %}
+              <img
+                src="{% static 'Images/icon-image.png' %}"
+                class="card-img-top"
+                alt="..."
+              />
+              {% endif %}
+
+              <!-- <img src="images/pathao.jpg" class="businessImg" /> -->
+              <h4 class="businessHeading">{{ post.title }}</h4>
+              <p class="businessTopic">{{ post.body }}</p>
+            </div>
+          </div>
+          {% endif%} {% endfor %}
+        </div>
+      </div>
+      <div>
+        <h4 class="category">Business</h4>
+        <div class="row">
+          {% for post in object_list %} {% if post.category == 'Business' %}
+          <div class="col-lg-3">
+            <div class="businessNews">
+              {% if post.header_image %}
+              <img src="{{ post.header_image.url }}" class="businessImg" />
+              {% else %}
+              <img
+                src="{% static 'Images/icon-image.png' %}"
+                class="card-img-top"
+                alt="..."
+              />
+              {% endif %}
+
+              <!-- <img src="images/pathao.jpg" class="businessImg" /> -->
+              <h4 class="businessHeading">{{ post.title }}</h4>
+              <p class="businessTopic">{{ post.body }}</p>
+            </div>
+          </div>
+          {% endif%} {% endfor %}
+        </div>
+      </div>
+      <div>
+        <h4 class="category">Entertainment</h4>
+        <div class="row">
+          {% for post in object_list %} {% if post.category == 'Entertainment' %}
+          <div class="col-lg-3">
+            <div class="businessNews">
+              {% if post.header_image %}
+              <img src="{{ post.header_image.url }}" class="businessImg" />
+              {% else %}
+              <img
+                src="{% static 'Images/icon-image.png' %}"
+                class="card-img-top"
+                alt="..."
+              />
+              {% endif %}
+
+              <!-- <img src="images/pathao.jpg" class="businessImg" /> -->
+              <h4 class="businessHeading">{{ post.title }}</h4>
+              <p class="businessTopic">{{ post.body }}</p>
+            </div>
+          </div>
+          {% endif%} {% endfor %}
+        </div>
+      </div>
+      <div>
+        <h4 class="category">Sports</h4>
+        <div class="row">
+          {% for post in object_list %} {% if post.category == 'Sports' %}
+          <div class="col-lg-3">
+            <div class="businessNews">
+              {% if post.header_image %}
+              <img src="{{ post.header_image.url }}" class="businessImg" />
+              {% else %}
+              <img
+                src="{% static 'Images/icon-image.png' %}"
+                class="card-img-top"
+                alt="..."
+              />
+              {% endif %}
+              <!-- <img src="images/stadium.jpg" class="businessImg" /> -->
+              <h4 class="businessHeading">{{ post.title }}</h4>
+              <p class="businessTopic">{{ post.body }}</p>
+            </div>
+          </div>
+          {% endif%} {% endfor %}
+        </div>
+      </div>
+
+      <!--Footer-->
+      <div class="row footer" style="margin-top: 25px">
+        <div class="col-lg-4 footer-content">
+          <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
+          <p>The english edition Online News</p>
+          <p>Phone No: 9856234124,014256352</p>
+          <p>taxcompany@gmail.com</p>
+        </div>
+        <div class="col-lg-4 footer-content">
+          <h6>News</h6>
+          <p>Politics</p>
+          <p>Entertainment</p>
+          <p>Sports</p>
+          <p>Business</p>
+        </div>
+        <div class="col-lg-4 footer-content">
+          <h6>You can also find us on</h6>
+          <div style="font-size: 35px; margin-left: 10px">
+            <i class="fa fa-facebook-official"></i>
+            &nbsp;&nbsp;
+            <i class="fa fa-instagram"></i>
+            &nbsp;&nbsp;
+            <i class="fa fa-twitter-square"></i>
+          </div>
+        </div>
+        <div style="background-color: #090162; color: white; width: 100%">
+          <p style="text-align: center">
+            Copyright &copy; 2021 Tax Management System, All rights reserved
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
