--- a/Backend/login/loginapp/templates/loginapp/Html file/Edit.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Edit.html
@@ -68,6 +68,13 @@
                       id="exampleFormControlInput1"
                     >{{form.title}}</div>
                     </div>
+                    <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label"
+                        >Image</label>
+                        <div
+                      id="exampleFormControlInput1"
+                        >{{form.header_image}}</div>
+                        </div>
                      <div class="mb-3">
                       <label for="exampleFormControlInput1" class="form-label">Author</label>
                       <!-- <input type="author" class="form-control" id="exampleFormControlInput1" placeholder="Author"> -->
