--- a/Backend/login/loginapp/templates/loginapp/Html file/index.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/index.html
@@ -150,9 +150,9 @@
         <div class="row">
           {% for post in object_list %} {% if post.category == 'Politics' %}
           <div class="col-lg-3">
-            <div class="businessNews">
+            <div class="businessNews card" style="width: 18rem;" >
               {% if post.header_image %}
-              <img src="{{ post.header_image.url }}" class="businessImg" />
+              <img src="{{ post.header_image.url }}" class="businessImg"  style="object-fit: cover;"/>
               {% else %}
               <img
                 src="{% static 'Images/icon-image.png' %}"
@@ -162,7 +162,7 @@
               {% endif %}
 
               <!-- <img src="images/pathao.jpg" class="businessImg" /> -->
-              <h4 class="businessHeading">{{ post.title }}</h4>
+              <h4 class="businessHeading"><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a></h4>
               <p class="businessTopic">{{ post.body }}</p>
             </div>
           </div>
@@ -174,9 +174,9 @@
         <div class="row">
           {% for post in object_list %} {% if post.category == 'Business' %}
           <div class="col-lg-3">
-            <div class="businessNews">
+            <div class="businessNews card" style="width: 18rem;">
               {% if post.header_image %}
-              <img src="{{ post.header_image.url }}" class="businessImg" />
+              <img src="{{ post.header_image.url }}" class="businessImg" style="object-fit: cover;"/>
               {% else %}
               <img
                 src="{% static 'Images/icon-image.png' %}"
@@ -186,7 +186,7 @@
               {% endif %}
 
               <!-- <img src="images/pathao.jpg" class="businessImg" /> -->
-              <h4 class="businessHeading">{{ post.title }}</h4>
+              <h4 class="businessHeading"><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a></h4>
               <p class="businessTopic">{{ post.body }}</p>
             </div>
           </div>
@@ -198,9 +198,9 @@
         <div class="row">
           {% for post in object_list %} {% if post.category == 'Entertainment' %}
           <div class="col-lg-3">
-            <div class="businessNews">
+            <div class="businessNews card" style="width: 18rem;">
               {% if post.header_image %}
-              <img src="{{ post.header_image.url }}" class="businessImg" />
+              <img src="{{ post.header_image.url }}" class="businessImg" style="object-fit: cover;" />
               {% else %}
               <img
                 src="{% static 'Images/icon-image.png' %}"
@@ -210,7 +210,7 @@
               {% endif %}
 
               <!-- <img src="images/pathao.jpg" class="businessImg" /> -->
-              <h4 class="businessHeading">{{ post.title }}</h4>
+              <h4 class="businessHeading"><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a></h4>
               <p class="businessTopic">{{ post.body }}</p>
             </div>
           </div>
@@ -222,9 +222,9 @@
         <div class="row">
           {% for post in object_list %} {% if post.category == 'Sports' %}
           <div class="col-lg-3">
-            <div class="businessNews">
+            <div class="businessNews card"  style="width: 18rem;">
               {% if post.header_image %}
-              <img src="{{ post.header_image.url }}" class="businessImg" />
+              <img src="{{ post.header_image.url }}" class="businessImg" style="object-fit: cover;" />
               {% else %}
               <img
                 src="{% static 'Images/icon-image.png' %}"
@@ -233,7 +233,7 @@
               />
               {% endif %}
               <!-- <img src="images/stadium.jpg" class="businessImg" /> -->
-              <h4 class="businessHeading">{{ post.title }}</h4>
+              <h4 class="businessHeading"><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a></h4>
               <p class="businessTopic">{{ post.body }}</p>
             </div>
           </div>
