Added about us page and news page

--- a/css/style.css
+++ b/css/style.css
@@ -1,145 +1,147 @@
 /*************home page and sign in--> logo css****************/
 
-.navigation {
-  background-color: #090162;
+.navigation{
+	background-color: #090162;
 }
-.navbar-logo {
-  margin-left: 4px;
-  cursor: pointer;
-  width: 60px;
-  margin-top: 0rem;
+.navbar-logo{
+    margin-left: 4px;
+    cursor: pointer;
+    width: 60px;
+    margin-top: 0rem;
 }
-.nav-link {
-  font-family: Poppins;
-  margin: 10px;
-  font-size: 16px;
+.nav-link{
+	font-family: Poppins;
+	margin: 10px;
+	font-size: 16px;
 }
 
 /*index.html page-content css*/
-.news-portal {
-  margin-top: 15px;
+.news-portal{
+	margin-top: 15px;
 }
-.image {
-  width: px;
-  height: 500px;
+.image{
+	width: 696px;
+	height: 500px;
+
 }
-.image1 {
-  width: 350px;
-  height: 200px;
-  left: 118px;
-  top: 149px;
+.image1{
+	width: 350px;
+	height: 200px;
+	left: 118px;
+	top: 149px;
 }
-.title {
-  font-weight: bold;
-  margin-top: 5px;
-  color: black;
+.title{
+	font-weight: bold;
+	margin-top: 5px;
+	color: black;
 }
 
-.advertisement {
-  width: 95%;
-  margin-top: 2rem;
+
+.advertisement{
+	width: 95%;
+	margin-top: 2rem;
 }
 
-.category {
-  margin-top: 3rem;
+.category{
+	margin-top: 3rem;
 }
-.businessImg {
-  width: 250px;
-  height: 200px;
-  left: 118px;
-  top: 149px;
-}
-
-.businessHeading {
-  font-size: 15px;
-  font-family: "Poppins";
-  font-weight: bold;
-  margin-top: 10px;
+.businessImg{
+	width: 250px;
+	height: 200px;
+	left: 118px;
+	top: 149px;
 }
 
-.businessTopic {
-  font-size: 12px;
-  font-family: "Poppins";
-  margin-top: 8px;
-  color: grey;
+.businessHeading{
+	font-size: 15px;
+	font-family: 'Poppins';
+	font-weight: bold;
+	margin-top: 10px;
+}
+
+.businessTopic{
+	font-size: 12px;
+	font-family: 'Poppins';
+	margin-top: 8px;
+	color: grey;
 }
 
 /*footer css of index.html*/
-.footer {
-  background-color: #090162;
-  color: white;
+.footer{
+	background-color: #090162; 
+	color: white;
 }
 
-.footer-content {
-  margin-top: 20px;
+.footer-content{
+	margin-top: 20px;
 }
 
-.icons {
-  background-color: ghostwhite;
-  border: 1px solid white;
-  border-radius: 50%;
-  font-size: 15px !important;
+.icons{
+	background-color: ghostwhite;
+	border: 1px solid white;
+	border-radius: 50%;
+	font-size: 15px !important;
 }
-@media (max-width: 1024px) {
-  .image {
-    width: 600px;
-    height: 500px;
-  }
-  .image1 {
-    width: 300px;
-    height: 200px;
-  }
+@media (max-width: 1024px){
+	.image{
+		width: 600px;
+		height: 500px;
+	}
+	.image1{
+		width: 300px;
+		height: 200px;
+	}
 }
-@media (max-width: 768px) {
-  .image1 {
-    width: 600px;
-    height: 300px;
-    margin-left: 10px;
-  }
-  .title {
-    margin-left: 10px;
-  }
+@media (max-width: 768px){
+	.image1{
+		width: 600px;
+		height:300px;
+		margin-left: 10px;
+	}
+	.title{
+		margin-left: 10px;
+	}
 }
-@media (max-width: 540px) {
-  .image {
-    width: 500px;
-    height: 300px;
-  }
-  .image1 {
-    width: 500px;
-    height: 300px;
-  }
+@media (max-width: 540px){
+	.image{
+		width: 500px;
+		height: 300px;
+	}
+	.image1{
+		width: 500px;
+		height:300px;
+	}
 }
-@media (max-width: 414px) {
-  .image {
-    width: 350px;
-    height: 200px;
-  }
-  .image1 {
-    width: 350px;
-    height: 200px;
-  }
+@media (max-width: 414px){
+	.image{
+		width: 350px;
+		height: 200px;
+	}
+	.image1{
+		width: 350px;
+		height: 200px;
+	}
 }
-@media (max-width: 360px) {
-  .image {
-    width: 300px;
-    height: 200px;
-  }
-  .image1 {
-    width: 320px;
-    height: 200px;
-  }
+@media (max-width: 360px){
+	.image{
+		width: 300px;
+		height: 200px;
+	}
+	.image1{
+		width: 320px;
+		height: 200px;
+	}
 }
-@media (max-width: 280px) {
-  .image {
-    width: 250px;
-    height: 200px;
-  }
-  .image1 {
-    width: 250px;
-    height: 200px;
-  }
-  .title {
-    font-size: 15px;
-  }
+@media (max-width: 280px){
+	.image{
+		width: 250px;
+		height: 200px;
+	}
+	.image1{
+		width: 250px;
+		height: 200px;
+	}
+	.title{
+		font-size: 15px;
+	}
 }
